k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myeonri-api
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: myeonri-api
  template:
    metadata:
      labels:
        app: myeonri-api
    spec:
      containers:
        - name: myeonri-api
          image: docker.io/kyuhunjo/myeonri-api-main:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8000
          volumeMounts:
            - name: logs
              mountPath: /var/log/myeonri
      volumes:
        - name: logs
          persistentVolumeClaim:
            claimName: myeonri-api-logs-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: myeonri-api-service
  namespace: default
spec:
  selector:
    app: myeonri-api
  ports:
    - port: 8000
      targetPort: 8000
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    traefik.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: traefik
  rules:
    - host: api.imjoe24.com
      http:
        paths:
          - backend:
              service:
                name: myeonri-api-service
                port:
                  number: 8000
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - api.imjoe24.com
      secretName: imjoe24-tls
